# Agent-Harness

./: .env.example  .gitignore  README.md  main.py  memory.md  pyproject.toml  t.py
.claude/: CLAUDE.md
.claude/hooks/: session_start_hook.py
agent/: __main__.py  agent.py  client.py  decorator.py  hooks.py  loop.py  messages.py  skills.py  tool_handler.py  usage.py
agent/base_tools/: load_tool.py  plan.py  read.py  search.py  skill.py
agent/context/: memory.md  system_prompt.md
agent/sinks/: __init__.py  base.py  helpers.py  hooks.py  langfuse.py  log.py  protocol.py  stdout.py
agent/tools/: calculator.py  file_architecture.py  read_file.py  weather.py
coding/: __main__.py  memory.md  prompt.md  pyproject.toml  system_prompt.md
coding/context/: memory.md  prompt.md
coding/skills/bug-hunt/: SKILL.md
coding/skills/bug-hunt/assets/: repro_template.py
coding/skills/bug-hunt/references/: common-bugs.md
coding/skills/codebase-recon/: SKILL.md
coding/skills/codebase-recon/scripts/: find_entrypoints.py
coding/skills/skill_builder/assets/template-skill/: SKILL.md
coding/skills/skill_builder/scripts/: init_skill.py
coding/tools/: bash.py  edit.py  glob.py  grep.py  tree.py  write.py
coding_agent/: __main__.py
coding_agent/tools/: glob.py  grep.py  tree.py  write.py
docs/: distribution.md  tui_spec.md
scripts/: download_model.py
server/: config.py  serve.py
skills/skill_builder/: SKILL.md
tools/: file_architecture.py  read_file.py  weather.py
tools/base/: bash.py  edit.py  extract.py  glob.py  grep.py  load_tool.py  plan.py  read.py  search.py  skill.py  tree.py  write.py
tools/coding/: grep.py  tree.py  (+1 more)
tui/: app.py  cells.py  history.py  panels.py  sink.py  sprites.py
(+19 files in other folders)
