[project]
name = "local-agent"
version = "0.1.0"
description = "Streaming, tool-calling agent client for any OpenAI-compatible endpoint."
requires-python = ">=3.12,<3.13"
dependencies = [
    "python-dotenv>=1.0",
]

[dependency-groups]
agent = [
    "openai>=1.40",
    "httpx>=0.27",
    "pydantic>=2.0",
    "prompt_toolkit>=3.0.50",
    "rich>=13.7",
    "langfuse>=3.0",
]

[tool.uv]
# Reproducible: lock to versions resolved at sync time.
package = false
