[project]
name = "coding"
version = "0.1.0"
description = "Coding domain: tools, skills, and entry point built on agent-harness."
requires-python = ">=3.12,<3.13"
dependencies = [
    "agent-harness",
    "tui",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false

[tool.uv.sources]
agent-harness = { workspace = true }
tui = { workspace = true }
